<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.maxwit.xmpp_im_app.CreateChatRoom" >

    <EditText
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/room_name"
        android:inputType="text"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/room_describe"
        android:inputType="text"
        android:ems="10" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/room_password"
        android:inputType="text"
        android:ems="10" />

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    
    <Button 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="createRoom"
        android:text="@string/create"/>
  
    <Button 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="cancerCreate"
        android:text="@string/cancel"/>

    <CheckBox
        android:id="@+id/persistent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/persistent" />

</LinearLayout>